--- a/CS146/Lower-Bounds-for-Comparison-Based-Sorting-Decision-Trees.html
+++ b/CS146/Lower-Bounds-for-Comparison-Based-Sorting-Decision-Trees.html
@@ -3,6 +3,77 @@
 	<head>
 		<title>Lower Bounds for Comparison Based Sorting: Decision Trees</title>
 	</head>
+	.tree ul{
+		padding-top: 20px;
+		position: relative;
+	}
+	<style>	
+	.tree li{
+		float: left;
+		text-align: center;
+		list-style-type: none;
+		position: relative;
+		padding: 20px 5px 0 5px;
+	}
+
+	.tree li::before, .tree li::after{
+		content: '';
+		position: absolute;
+		top: 0;
+		right: 50%;
+		border-top: 1px solid #ccc;
+		width: 50%;
+		height: 20px;
+	}
+	
+	.tree li::after{
+		right: auto;
+		left: 50%;
+		border-left: 1px solid #ccc;
+	}
+
+	.tree li:only-child::after, .tree li:only-child::before{
+		display: none;
+	}
+
+	.tree li:only-child{
+		padding-top: 0;
+	}
+
+	.tree li:first-child::before, .tree li:last-child::after{
+		border: 0 none;
+	}
+	
+	.tree li:last-child::before{
+		border-right: 1px solid #ccc;
+		border-radius: 0 5px 0 0;
+	}
+
+	.tree li:first-child::after{
+		border-radius: 5px 0 0 0;
+	}
+
+	.tree ul ul::before{
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 50%;
+		border-left: 1px solid #ccc;
+		width: 0;
+		height: 20px;
+	}
+	
+	.tree li div{
+		border: 1px solid #ccc;
+		padding: 5px 10px;
+		text-decoration: none;
+		color: #666;
+		font-family: arial, verdana, tahoma;
+		font-size: 11px;
+		display: inline-block;
+		border-radius: 5px;
+	}
+	</style>
 	<body>
 		<h1><b><u>Lower Bounds for Comparison Based Sorting: Decision Trees</u></b></h1>
 		<div>
@@ -23,29 +94,100 @@
 			</ul>
 			<p>If we can sort in <i>O</i>(<i>n</i>log<i>n</i>), then <i>O</i>(<i>n<sup>2</sup></i>) doesn't look so good anymore.</p>
 		</div>
-		<p><i>InsertionSort</i>(array A){
-		<br>&nbsp; for(i=1 to A.length-1){
-		<br>&nbsp; &nbsp; temp = A[i];
-		<br>&nbsp; &nbsp; j = i;
-		<br>&nbsp; &nbsp; while(i > 0 && temp < A[j-1]){
-		<br>&nbsp; &nbsp; &nbsp; A[j] = A[j - 1];
-		<br>&nbsp; &nbsp; &nbsp; j--;
-		<br>&nbsp; &nbsp; }
-		<br>&nbsp; &nbsp; A[j] = temp;
-		<br>&nbsp; }
-		<br>}
-		</p>
-		
-		<p><i>InsertionSortFor3Items</i>(array A[0..2){
-                <br>&nbsp; for(i=1 to 2){
-                <br>&nbsp; &nbsp; temp = A[i];
-                <br>&nbsp; &nbsp; j = i;
-                <br>&nbsp; &nbsp; while(i > 0 && temp < A[j-1]){
-                <br>&nbsp; &nbsp; &nbsp; A[j] = A[j - 1];
-                <br>&nbsp; &nbsp; &nbsp; j--;
-                <br>&nbsp; &nbsp; }
-                <br>&nbsp; &nbsp; A[j] = temp;
-                <br>&nbsp; }
-                <br>}
+		<div style="width:100%;">
+			<div style="width: 25%; height: 100px; float: left;">
+				<p>Regular Insertion Sort</p>
+				<p><i>InsertionSort</i>(array A){
+				<br>&nbsp; &nbsp; for(i=1 to A.length-1){
+				<br>&nbsp; &nbsp; &nbsp; &nbsp; temp = A[i];
+				<br>&nbsp; &nbsp; &nbsp; &nbsp; j = i;
+				<br>&nbsp; &nbsp; &nbsp; &nbsp; while(i > 0 && temp < A[j-1]){
+				<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; A[j] = A[j - 1];
+				<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; j--;
+				<br>&nbsp; &nbsp; &nbsp; &nbsp; }
+				<br>&nbsp; &nbsp; &nbsp; &nbsp; A[j] = temp;
+				<br>&nbsp; &nbsp; }
+				<br>}
+				</p>
+			</div>
+			<div style="width: 25%; height: 100px; float: left;">
+				<p>Insertion Sort for 3 Items</p>
+				<p><i>InsertionSortFor3Items</i>(array A[0..2){
+                		<br>&nbsp; &nbsp; for(i=1 to 2){
+                		<br>&nbsp; &nbsp; &nbsp; &nbsp; temp = A[i];
+                		<br>&nbsp; &nbsp; &nbsp; &nbsp; j = i;
+                		<br>&nbsp; &nbsp; &nbsp; &nbsp; while(i > 0 && temp < A[j-1]){
+                		<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; A[j] = A[j - 1];
+                		<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; j--;
+                		<br>&nbsp; &nbsp; &nbsp; &nbsp; }
+                		<br>&nbsp; &nbsp; &nbsp; &nbsp; A[j] = temp;
+                		<br>&nbsp; &nbsp; }
+                		<br>}
+			</div>
+			<div style="width 25%; height: 100px; float: left;">
+				<p>Insertion Sort for 3 Items version 2</p>
+				<p><i>InsertionSortFor3Items</i>(array A[0..2){
+                                <br>&nbsp; &nbsp; &nbsp; i = 1;
+                                <br>&nbsp; &nbsp; &nbsp; temp = A[i];
+                                <br>&nbsp; &nbsp; &nbsp; j = i;
+                                <br>&nbsp; &nbsp; &nbsp; while(i > 0 && temp < A[j-1]){
+                                <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; A[j] = A[j - 1];
+                                <br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; j--;
+                                <br>&nbsp; &nbsp; &nbsp; }
+                                <br>&nbsp; &nbsp; &nbsp; A[j] = temp;
+                                <br>&nbsp; &nbsp; &nbsp; i = 2;
+				<br>&nbsp; &nbsp; &nbsp; temp = A[i];
+				<br>&nbsp; &nbsp; &nbsp; A[j] = temp;
+				<br>&nbsp; &nbsp; &nbsp; while(j > 0 && temp < A[j - 1]){
+				<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; A[j] = A[j - 1];
+				<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; j--;
+				<br>&nbsp; &nbsp; &nbsp; }
+				<br>&nbsp; &nbsp; &nbsp; A[j] = temp;
+                                <br>}
+			</div>
+			<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+			<p>Insertion Sort for 3 Items without Loops</p>
+			<p><i>InsertionSort</i>(array A[0..2]){
+			<br>x = A[0], y = A[1], z = A[2]
+			<br>&nbsp; &nbsp; if(x &le; y)
+			<br>&nbsp; &nbsp; &nbsp; &nbsp; if(y &le; z) A[0] = x, A[1] = y, A[2] = z &nbsp; &nbsp; &nbsp; &nbsp; x &le; y &le; z
+			<br>&nbsp; &nbsp; &nbsp; &nbsp; else if(x &le; z) A[0] = x, A[1] = z, A[2] = y &nbsp; &nbsp; &nbsp; &nbsp; x &le; z < y
+			<br>&nbsp; &nbsp; &nbsp; &nbsp; else A[0] = z, A[1] = x, A[2] = y &nbsp; &nbsp; &nbsp; &nbsp; z < x &le; y
+			<br>&nbsp; &nbsp; else
+			<br>&nbsp; &nbsp; &nbsp; &nbsp; if(x &le; z) A[0] = y, A[1] = x, A[2] = z &nbsp; &nbsp; &nbsp; &nbsp; y < x &le; z
+			<br>&nbsp; &nbsp; &nbsp; &nbsp; else if(y &le; z) A[0] = y, A[1] = z, A[2] = x &nbsp; &nbsp; &nbsp; &nbsp; y &le; z < x
+			<br>&nbsp; &nbsp; &nbsp; &nbsp; else A[0] = z, A[1] = y, A[2] = x &nbsp; &nbsp; &nbsp; &nbsp; z < y < x
+		</div>
+		<br><br><br>
+		<div class="tree">
+			<ul>
+				<li>x &le; y
+					<ul>
+						<li>y &le; z
+							<ul>
+								<li>x &le; y &le; z</li>
+								<li>x &le; z
+									<ul>
+										<li>x &le; z < y</li>
+										<li>z < x &le; y</li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+						<li>x &le; z
+							<ul>
+								<li>y < x &le; z</li>
+								<li>y &le; z
+									<ul>
+										<li>y &le; z< x</li>
+										<li>z < y < x</li>
+									</ul>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
 	</body>
 </html>
