continued midterm studying

--- a/Anth12/Midterm1StudyGuide.html
+++ b/Anth12/Midterm1StudyGuide.html
@@ -24,30 +24,93 @@ Empirical Process: It means using evidence from watching, measuring, or testing 
 	</ol>
 	<h3><u>Chapter 2</u></h3>
 	<ol>
-		<ul>
-			<li>What is Darwins contribution?
-			<br>Darwin's contribution is the Theory of Natural Selection as established through his observation of the Galapagos Island.
-			</li>
-			<li>What is natural selection and adaptive radiation?
-			<br>The process by which in which a selection of features that provide a higher chance of survival.
-			</li>
-			<li>What is evolution in light of natural selection?
-			<br>It is the change of phenotypes that leads to an overarching mutation for a certain environment. 
-			</li>
-			<li>Who was Alfred Wallace?
-			<br>A biologist who almost took the credit for natural selection but did differ to Darwin.
-			</li>
-			<li>What were Darwin’s key observations?
-			<br>
-			</li>
-			<li>What is the difference between Lamarck’s and Darwin’s theories?
-			<br>
-			</li>
-			<li>Who was Mendel?
-			<br>
-			</li>
-			<li>Understand the terms phenotype, genotype, allele, locus, dominant, recessive, gene pool.
-			<br>
-			</li>
+		<li>What is Darwins contribution?
+		<br>Darwin's contribution is the Theory of Natural Selection as established through his observation of the Galapagos Island.
+		</li>
+		<li>What is natural selection and adaptive radiation?
+		<br>The process by which in which a selection of features that provide a higher chance of survival.
+		</li>
+		<li>What is evolution in light of natural selection?
+		<br>It is the change of phenotypes that leads to an overarching mutation for a certain environment. 
+		</li>
+		<li>Who was Alfred Wallace?
+		<br>A biologist who almost took the credit for natural selection but did differ to Darwin.
+		</li>
+		<li>What were Darwin’s key observations?
+		<br>The key observations of Darwin are individuals of a species are not identical, traits are passed from generation to generation, more offspring are born than can survive, and only trhe survivors of the competition for resources will reproduce.
+		</li>
+		<li>What is the difference between Lamarck’s and Darwin’s theories?
+		<br>Darwin was based on concept of natural selection while Lamarck is based on the concept of internal vital force which is present in all living organisms. Lamarck believe organisms developed traits during their life. Darwin believed organisms were born with it.
+		</li>
+		<li>Who was Mendel?
+		<br>Mendel was the person responsible for the laws of inheritance.
+		</li>
+		<li>Understand the terms phenotype, genotype, allele, locus, dominant, recessive, gene pool.
+			<ul>
+				<li>Phenotype: physical appearance or observable characteristic of an organism</li>
+				<li>Genotype: the genetic material of an organism.</li>
+				<li>Allele: one of two or more genees that may occur alternatively at a given site(locus) on a chromosome.</li>
+				<li>Locus: a position on a chromosome where a particular gene or genetic marker is located</li>
+				<li>Dominant: Apparent and prominent</li>
+				<li>Recessive: not apparent and not prominent</li>>
+				<li>Gene Pool: the total genetic diversity found within a population or a species</li>
+			</ul>
+		</li>
+	</ol>
+	<h3><u>Chapter 3</u></h3>
+	<ol>
+		<li>What is the difference between prokaryotes and eukaryotes?
+			<ul>
+				<li>Prokaryotes: Unicellular organisms that lack a true nucleus and other membrane-bound organelles.</li>
+				<li>Eukaryotes: Unicellular and Multicellular organisms that have a true nucleus and various membrane-bound organelles.</li>
+			</ul>
+		</li>
+		<li>Describe the types of cells in humans. What is the function of each? Where do we find them?
+			<ul>
+				<li>Stem Cells: Found in the bone marrow, umbilical cord blood, and certain tissues. Repair tissues, regenerate organs and disease treatment.</li>
+				<li>Bone Cells: Found in the bones of a person. Maintain and remodel bone tissue while marginalizing calcim balance.</li>
+				<li>Blood Cells: Found in the blood streams. Vital for oxygen transport, immune defense, and clotting.</li>
+				<li>Muscle Cells: Found in the muscles. Enable movements such as contraction and extension.</li>
+				<li>Nerve Cells: Found in the brain and nervous system. Transmit electrical signals for communication.</li>
+				<li>Epithelial Cells: Airways, outerlayer of skin, and the gut. Line surfaces, protect, and absorb.</li>
+				<li>Liver Cells: Found in the liver. Detoxify, metabolize, and produce bile.</li>
+				<li>Fat Cells: Found in adipose tissue around the body. Store energy as fat.</li>
+				<li>Immune Cells: Found all across the body. Defend against pathogens.</li>
+				<li>Reproductive Cells: Found in testis or ovaries. Responsible for reproduction.</li>
+			</ul>
+		</li>
+		<li>How many chromosomes does each cell type have?
+			<ul>
+				<li>Somatic Cells: 46 chromosomes</li>
+				<li>Gamete Cells: 23 chromosomes</li>
+			</ul>
+		</li>
+		<li>What are DNA and RNA? Where are they located? What is their difference?
+			<ul>
+				<li>DNA: Deoxyribonucleic Acid: long-term storage of genetic information. Double helixed which contain phosphate, 5-carbon sugar, and nitrogenous bases (Adenine, Thymine, Guanin, and Cytosine).</li>
+				<li>RNA: Ribonucleic Acid: messenger between DNA and protein synthesis. Single stranded and shorter than DNA.</li>
+			</ul>
+		</li>
+		<li>Describe the composition of DNA.
+		<br>DNA consists of Phosphate, 5-carbon sugar, and nitrogenous bases Adenine, Thymine, Guanine, and Cytosine. Adenine pairs with Thymine and Guanine pairs with Cytosine.
+		</li>
+		<li>What forms a nucleotide?
+		<br>Nucleotides are the essential building blocks of DNA and RNA. They are made from the information above. In RNA, Uracil (U) replaces Thymine.
+		</li>
+		<li>Why are triplets of nucleotides important?
+			<br>Triplets start and stop codons and help allowing protein synthesis.
+		</li>
+		<li>How does DNA replicate?
+			<br>DNA is replicated through Protein Synthesis.
+		</li>
+		<li>Describe what proteins are and their function.
+			<br>Proteins are complex molecules that help structure and support, catalyze chimical reactions with enzymes, transport and storage, immune defense, cell signaling, and providing energy sources.
+		</li>
+		<li>Describe the process of protein synthesis. Where do the different processes occur?</li>
+		<li>What happens during transcription, translation?</li>
+		<li>Describe the different kinds of cell division.</li>
+		<li>Define haploid/diploid cells and numbers.</li>
+		<li>What are accidental changes in the DNA called? Examples?</li>
+		<li>Who determines the biological sex of an individual? How?</li>
 </body>
 </html>
