Almost done with chapter 3

--- a/Anth12/Midterm1StudyGuide.html
+++ b/Anth12/Midterm1StudyGuide.html
@@ -106,9 +106,17 @@ Empirical Process: It means using evidence from watching, measuring, or testing 
 		<li>Describe what proteins are and their function.
 			<br>Proteins are complex molecules that help structure and support, catalyze chimical reactions with enzymes, transport and storage, immune defense, cell signaling, and providing energy sources.
 		</li>
-		<li>Describe the process of protein synthesis. Where do the different processes occur?</li>
-		<li>What happens during transcription, translation?</li>
-		<li>Describe the different kinds of cell division.</li>
+		<li>Describe the process of protein synthesis. Where do the different processes occur?
+			<br>Protein Synthesis consists of transcription and translation. Transcription occurs in the nucleus of the cell where RNA polymerases converts DNA sequences to mRNA. Translation occurs in the ribosomes.
+		</li>
+		<li>What happens during transcription, translation?
+			<br>Transcription converts DNA sequences to mRNA. Translation is the process where the mRNA is decoded to produce a polypeptide chain (protein).
+		</li>
+		<li>Describe the different kinds of cell division.
+			<ul>
+				<li>Mitosis: A process of cell duplication durting which one cell gives rise to two genetically identical daughter cells.</li>
+				<li>Meiosis: A type of cell division that produces four haploid daughter cells from a single cell.</li>
+		</li>
 		<li>Define haploid/diploid cells and numbers.</li>
 		<li>What are accidental changes in the DNA called? Examples?</li>
 		<li>Who determines the biological sex of an individual? How?</li>
