finished midterm1 study guide

--- a/Anth12/Midterm1StudyGuide.html
+++ b/Anth12/Midterm1StudyGuide.html
@@ -117,8 +117,74 @@ Empirical Process: It means using evidence from watching, measuring, or testing 
 				<li>Mitosis: A process of cell duplication durting which one cell gives rise to two genetically identical daughter cells.</li>
 				<li>Meiosis: A type of cell division that produces four haploid daughter cells from a single cell.</li>
 		</li>
-		<li>Define haploid/diploid cells and numbers.</li>
-		<li>What are accidental changes in the DNA called? Examples?</li>
-		<li>Who determines the biological sex of an individual? How?</li>
+		<li>Define haploid/diploid cells and numbers.
+			<ul>
+				<li>Haploid: Created specifically for the purpose of reproduction. Examples are the egg and sperm cells in humans.</li>
+				<li>Diploid: Cells that contain a pair of chromosomes. One from either parent. 
+			</ul>
+		</li>
+		<li>What are accidental changes in the DNA called? Examples?
+		<br>Accidental changes in DNA is called mutation. Examples are somatic mutations which occur in the cells. Such mutations can cause cancer.
+		</li>
+		<li>Who determines the biological sex of an individual? How?
+		<br>The male determines the sex of an individual due to them being the only one to pass the Y chromosome.
+		</li>
+	</ol>
+	<h3><u>Chapter 4</u></h3>
+	<ol>
+		<li>Describe what are Demes.
+		<br>Subdivisions of a population consisting of closely related plants, animals, or people, typically breeding mainly within the group.
+		</li>
+		<li>In population genetics, explain micro- and macroevolution.
+			<ul>
+				<li>Microevolution: simply a change in gene frequency within a population</li>
+				<li>Macroevolution: A major change within the population.</li>
+			</ul>
+		</li>
+		<li>What is Hardy-Weinberg equilibrium? How do we use it?
+		<br>An equation to predict genotype and allele frequencies in future generations, assess the equilibrium of current populations, and interpret the genotype and allele frequency of earlier generations. Equation: p<sup>2</sup> + 2pq + q<sup>2</sup> = 1
+		</li>
+		<li>What evolutionary forces are there? How do they work? Which ones are “good” or “bad”?
+			<ul>
+				<li>Mutation: Random change within an individual's genome.</li>
+				<li>Gene Flow: the transfer of genetic material from one population to another. mediated by reproduction and vertical gene transfer from parent to offspring.</li>
+				<li>Genetic Drift:  random fluctuations in the numbers of gene variants in a population. when the occurrence of variant forms of a gene, called alleles, increases and decreases by chance over time.</li>
+				<li>Natural Selection: genetic mutations that are beneficial to an individual's survival are passed on through reproduction.</li>
+			</ul>
+		</li>
+		<li>Know what happens with the disease sickle-cell anemia. It’s an example of what process?
+		<br>Sickle-cell anemia is when blood cells shrink and become sickle shaped and sticky. These cells can cause blood to slow down or even be blocked. It is an example of Natural Selection.
+		</li>
+		<li>For mutations to be inherited, do they need to occur on the haploid or diploid cell? In what case do these mutations have evolutionary consequences?
+		<br>Mutations can occur in both haploid and diploid cells and usually have consequences when they decrease an organism's fitness. 
+		</li>
+	</ol>
+	<h3><u>Chapter 5</u></h3>
+	<ol>
+		<li>What is Allen’s rule?
+		<br>ecogeographical rule broadly stating that animals adapted to cold climates have shorter and thicker limbs and bodily appendages than animals adapted to warm climates.
+		</li>
+		<li>How do we adapt to the environment?
+		<br>We adapt by reducing our vulnerability to the climate's impact.
+		</li>
+		<li>Define genetic adaptation.
+		<br>A biological characteristic with a heritable basis that improves reproduction and/or survival and results from evolution by natural selection.
+		</li>
+		<li>Do races exist? Explain.
+		<br>Biologically speaking, race does not exist. In terms of biology, we are the same species and do not have any difference aside from skin tone and external structures that are minor.
+		</li>
+		<li>What is melanin? Benefits? Drawbacks?
+		<br>Melanin is a complex polymer that originates from the amino acid tryosine. It helps block the UV radiation from the sun. It, however, is linked to higher chances of cancer on the skin.
+		</li>
+		<li>Why is vitamin D important?
+		<br>It's vital to bone health, muscle movement, nerve connections to the brain, and immune system function.
+		</li>
+		<li>What are the different growth stages? What happens during each one?
+		<br>stage one, infancy, trust versus mistrust; stage two, toddlerhood, autonomy versus shame and doubt; stage three, preschool years, initiative versus guilt; stage four, early school years, industry versus inferiority; stage five, adolescence,
+		</li>
+		<li>What is homeostasis?
+		<br>the tendency toward a relatively stable equilibrium between interdependent elements, especially as maintained by physiological processes.
+		</li>
+	</ol>
 </body>
 </html>
